--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ psutil==5.8.0
 pycairo==1.16.2
 pycups==2.0.1
 pyftdi==0.54.0
-pygame==1.9.6
+pygame
 Pygments==2.7.1
 PyGObject==3.38.0
 pyinotify==0.9.6
