--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Adafruit-Blinka==7.2.0
-adafruit-circuitpython-busdevice==5.1.8
-adafruit-circuitpython-epd==2.10.2
-adafruit-circuitpython-framebuf==1.4.9
-adafruit-circuitpython-typing==1.3.1
-Adafruit-PlatformDetect==3.22.0
-Adafruit-PureIO==1.1.9
+#Adafruit-Blinka==7.2.0
+#adafruit-circuitpython-busdevice==5.1.8
+#adafruit-circuitpython-epd==2.10.2
+#adafruit-circuitpython-framebuf==1.4.9
+#adafruit-circuitpython-typing==1.3.1
+#Adafruit-PlatformDetect==3.22.0
+#Adafruit-PureIO==1.1.9
 astroid==2.5.1
 asttokens==2.0.4
 automationhat==0.2.0
@@ -69,7 +69,7 @@ PyJWT==1.7.1
 pylint==2.7.2
 pyOpenSSL==20.0.1
 pyserial==3.5b0
-pysmbc==1.0.23
+pysmbc
 python-apt==2.2.1
 python-dotenv==0.20.0
 pyusb==1.2.1
